--- a/me/assets/app.css
+++ b/me/assets/app.css
@@ -94,6 +94,7 @@ body {
     list-style: none;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(50px, 100px));
+    padding: 0;
 }
 
 .index-a2z-container > ul > li {
@@ -136,4 +137,8 @@ body {
 .index-a2z-contents > div > ul > li:hover {
     background-color: #A9A9A9;    
     border-left: 8px black solid;
+}
+
+.index-cta {
+    text-align: center;
 }
