--- a/me/assets/app.css
+++ b/me/assets/app.css
@@ -3,22 +3,53 @@
     src: url(/assets/TheanoDidot-Regular.ttf)
 }
 
+#main-container {}
+
 #header-container {
-    display:grid;
-    grid-template-columns: 200px 20px min-content 20px min-content 20px max-content;
-    
-    grid-template-rows: 8vh;
+    list-style: none;
+    margin-bottom: 50px;
+    padding-top: 15px;
+    padding-left: 15px;
+    background-color: #DCDCDC;
+    vertical-align: middle;
+    margin-top: 8px;
+    padding-bottom: 12px;
+    border-radius: 5px;
 }
 
+#header-container > li {
+    display: inline;
+}
+
+#header-container > li:not(:first-child) {
+    border-left: 2px #3399FF solid;
+    padding-left: 20px;
+}
+
+#header-container > li:not(:last-child) {
+    margin-right: 20px;
+}
+
+
+
 body {
-    font-family: site-font;
+    
     margin-top: 0;
     margin-bottom: 0;
     padding: 0;
     background-color: #F8F6F6;
+
+}
+
+* {
+    font-family: site-font;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
+}
+
+html {
+    font-size: .5vw;
 }
 
 #body-container {
@@ -34,9 +65,6 @@ body {
 .site-title {
     font-size: 23px;
     font-weight: bold;
-    margin-bottom: 50px;
-    padding-top: 15px;
-    padding-left: 15px;
 }
 
 .site-title > a {
@@ -171,6 +199,52 @@ body {
     padding-right: 15.5vw;
 }
 
+@media screen and (max-width: 1500px) {
+    .landing-page-article {
+        padding-left: 10.5vw;
+        padding-right: 10.5vw;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .landing-page-article {
+        padding: 0;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    #header-container {
+        text-align: center;
+    }
+    #body-container {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    #body-container {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    #header-container > li {
+        display: block;
+    }
+    #header-container > li {
+        text-align: left;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #body-container {
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+}
+
 .landing-page-article-title {
     font-size: 40px;
 }
@@ -198,9 +272,23 @@ body {
 }
 
 .landing-page-article-greeting {
-    font-size: 30px;
+    font-size: 28px;
 }
 
 .landing-page-product-1 {
-    font-size: 30px;
+    font-size: 27px;
+    text-decoration: none;
+    color: black
+}
+
+.landing-page-product-1:hover {
+    color: gray;
+}
+
+.landing-page-img {
+    width: 100%;
+}
+
+.landing-page-about-header {
+    font-size: 26px;
 }
