--- a/me/assets/app.css
+++ b/me/assets/app.css
@@ -10,9 +10,8 @@
     margin-bottom: 50px;
     padding-top: 15px;
     padding-left: 15px;
-    background-color: #DCDCDC;
+    background-color: #F0F0F0;
     vertical-align: middle;
-    margin-top: 8px;
     padding-bottom: 12px;
     border-radius: 5px;
 }
@@ -33,9 +32,7 @@
 
 
 body {
-    
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0;
     padding: 0;
     background-color: #F8F6F6;
 
