Adjust styling, add Blog link to nav.

--- a/me/assets/app.css
+++ b/me/assets/app.css
@@ -274,8 +274,7 @@ html {
 
 .landing-page-product-1 {
     font-size: 27px;
-    text-decoration: none;
-    color: black
+    color: black;
 }
 
 .landing-page-product-1:hover {
