Remove margin-top, noticed a firefox issue.

--- a/me/assets/app.css
+++ b/me/assets/app.css
@@ -14,6 +14,7 @@
     vertical-align: middle;
     padding-bottom: 12px;
     border-radius: 5px;
+    margin-top: 0;
 }
 
 #header-container > li {
