--- a/me/assets/app2.css
+++ b/me/assets/app2.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: site-font;
-    src: url(/assets/fonts/FreeSeriff.ttf)
+    src: url(/assets/fonts/FreeSerif.ttf)
 }
 
 
@@ -19,18 +19,19 @@ a:hover {
 }
 
 .page-inner-container {
-    padding-left: 15.5vw;
-    padding-right: 15.5vw;
+    padding-left: 18.5vw;
+    padding-right: 18.5vw;
 }
 
 .page-title {
     font-size: 40px;
-    line-height: 45px;
+    line-height: 40px;
 }
 
 .page-content {
-    font-size: 21px;
-    line-height: 30.54px;
+    font-size: 22px;
+    line-height: 31.9px;
+    color:rgba(0, 0, 0, 0.84);
 }
 
 .page-author {
